# matrixMultiplication

./: CMakeLists.txt  README.md
openMp/: main.c
openMp_v2/: 2DArray.c  define.h  main.c  matrix.c
parallel/: define.h  main.c  matrix.c
pthreads/: 2DArray.c  a.out  main.c
pthreads/pthreads/: define.h
sequential/: matrix.c
sequential/sequential/: 2DArray.c  main.c
sequential/sequential.xcodeproj/: project.pbxproj
sequential/sequential.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
sequential/sequential.xcodeproj/project.xcworkspace/xcuserdata/Hennessy.xcuserdatad/: UserInterfaceState.xcuserstate
sequential/sequential.xcodeproj/xcuserdata/Hennessy.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
sequential/sequential.xcodeproj/xcuserdata/Hennessy.xcuserdatad/xcschemes/: sequential.xcscheme  xcschememanagement.plist
